<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.labexercise3.MainActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/textViewAge" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:id="@+id/spinnerAge" />

    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginTop="12dp"
        android:id="@+id/textViewGender"
        android:layout_weight="0.30" />

    <RadioGroup
        android:layout_width="206dp"
        android:layout_height="198dp"

        android:layout_marginTop="14dp"
        android:id="@+id/radioGroupGender">

        <RadioButton
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="31dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="24dp"
            android:id="@+id/radioButtonMale"
            android:layout_weight="0.34" />

        <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonFemale"
            android:layout_weight="1"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            />

    </RadioGroup>

    <CheckBox
        android:text="@string/smoker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/checkBoxSmoker"
         />

    <TextView
        android:text="@string/premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPremium" />

    <Button
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCalculate"
        android:onClick="calculatePremium" />


</LinearLayout>
